c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_declarations/local_var_follows_extern.c
int i = 10;

int main(void) {
    /* This declaration has external linkage,
     * so it refers to the static global variable
     * defined above. */
    extern int i;
    /* This declaraiton has no linkage,
     * so it conflicts with the previous one.
     */
    int i;
    return i;
}